--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1268,7 +1268,7 @@
                                                 <li class="active" role="presentation"><a data-toggle="tab" role="tab" href="#allproduct" aria-expanded="true"><span>All Product</span></a></li>
                                                 <li class="" role="presentation"><a data-toggle="tab" role="tab" href="#latestproduct" aria-expanded="false"><span>Latest item</span></a></li>
                                                 <li class="" role="presentation"><a data-toggle="tab" role="tab" href="#bestsaler" aria-expanded="false"><span>Best Saler</span></a></li>
-                                                <li class="" role="presentation"><a data-toggle="tab" role="tab" href="#mostpupoler" aria-expanded="false"><span>Most Pupoler</span></a></li>
+                                                <li class="" role="presentation"><a data-toggle="tab" role="tab" href="#mostpupoler" aria-expanded="false"><span>Most Popular</span></a></li>
                                             </ul>
                                         </div>
                                         <!-- / tab product menu -->
@@ -1895,7 +1895,7 @@
                                 <!-- product heading -->
                                 <div class="spacial-hadding product-heading">
                                     <h2 class="no-margin">
-                                        <span>Spacial Products</span>
+                                        <span>Special Products</span>
                                     </h2>
                                 </div>
                                 <!-- / product heading -->
